add percentile correction based on rmse

--- a/mlforecast/automl_percentile_correction_m5.ipynb
+++ b/mlforecast/automl_percentile_correction_m5.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# AutoML percentile-bias correction on M4 (XGBoost)\n",
+    "# AutoML percentile correction on M5 (XGBoost)\n",
     "\n",
-    "This notebook compares baseline AutoML forecasts vs. `percentile_correction=True` using M4 Weekly data."
+    "This version selects percentiles by overall **MSE** (metric mode).\n"
    ]
   },
   {
@@ -28,26 +28,25 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from scipy import stats\n",
-    "from utilsforecast.losses import rmse\n",
+    "from utilsforecast.losses import mse, rmse\n",
     "\n",
-    "from datasetsforecast.m4 import M4, M4Info\n",
-    "from datasetsforecast.m3 import M3, M3Info\n",
+    "from datasetsforecast.m5 import M5\n",
     "from mlforecast.auto import xgboost_space\n",
     "import optuna\n",
     "\n",
-    "def eval_rmse_bias(valid_df: pd.DataFrame, preds_df: pd.DataFrame, model_col: str) -> dict:\n",
-    "    merged = valid_df.merge(preds_df, on=[\"unique_id\", \"ds\"], how=\"inner\")\n",
-    "    err = merged[model_col] - merged[\"y\"]\n",
+    "def eval_metrics(valid_df: pd.DataFrame, preds_df: pd.DataFrame, model_col: str) -> dict:\n",
+    "    merged = valid_df.merge(preds_df, on=['unique_id', 'ds'], how='inner')\n",
+    "    err = merged[model_col] - merged['y']\n",
     "    return {\n",
-    "        \"rows\": len(merged),\n",
-    "        \"rmse\": float(np.sqrt(np.mean(np.square(err)))),\n",
-    "        \"bias\": float(np.mean(err)),\n",
+    "        'rows': len(merged),\n",
+    "        'rmse': float(np.sqrt(np.mean(np.square(err)))),\n",
+    "        'mse': float(np.mean(np.square(err))),\n",
+    "        'bias': float(np.mean(err)),\n",
     "    }\n",
-    "    \n",
-    "def rmse_loss(df, train_df):  # train_df is unused here\n",
-    "    # df has columns: [\"unique_id\", \"ds\", \"cutoff\", \"y\", \"model\"]\n",
-    "    return rmse(df, models=[\"model\"], id_col=\"unique_id\", target_col=\"y\")[\"model\"].mean()\n",
-    "\n"
+    "\n",
+    "def mse_loss(df, train_df):  # train_df is unused here\n",
+    "    # df has columns: ['unique_id', 'ds', 'cutoff', 'y', 'model']\n",
+    "    return mse(df, models=['model'], id_col='unique_id', target_col='y')['model'].mean()\n"
    ]
   },
   {
@@ -57,22 +56,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "group = \"Weekly\"\n",
-    "M4.download(\"data\", group=group)\n",
-    "df, *_ = M4.load(directory=\"data\", group=group)\n",
-    "df[\"ds\"] = df[\"ds\"].astype(int)\n",
+    "data_dir = 'data'\n",
+    "M5.download(data_dir)\n",
+    "Y_df, X_df, S_df = M5.load(directory=data_dir)\n",
+    "df = Y_df.copy()\n",
+    "df['ds'] = pd.to_datetime(df['ds'])\n",
     "\n",
-    "# Tweedie requires non-negative targets. Shift per series if needed.\n",
-    "min_by_id = df.groupby(\"unique_id\")[\"y\"].min()\n",
-    "#offset_by_id = (-min_by_id).clip(lower=0).rename(\"offset\").reset_index()\n",
-    "#df = df.merge(offset_by_id, on=\"unique_id\", how=\"left\")\n",
+    "# Optional: subsample ids for faster experiments\n",
+    "MAX_IDS = 5000\n",
+    "all_ids = df['unique_id'].unique()\n",
+    "if MAX_IDS is not None and len(all_ids) > MAX_IDS:\n",
+    "    rng = np.random.default_rng(0)\n",
+    "    keep_ids = rng.choice(all_ids, size=MAX_IDS, replace=False)\n",
+    "    df = df[df['unique_id'].isin(keep_ids)].copy()\n",
     "\n",
-    "h = M4Info[group].horizon\n",
-    "season_length = M4Info[group].seasonality\n",
+    "h = 28\n",
+    "season_length = 7\n",
+    "\n",
+    "# Percentile levels used for correction (customizable)\n",
+    "CORRECTION_LEVELS = list(range(5, 100, 5))\n",
     "\n",
     "n_windows = 2\n",
     "num_samples = 1  # increase for stronger tuning\n",
-    "optimize_kwargs = {\"timeout\": 300}"
+    "optimize_kwargs = {'timeout': 300}\n"
    ]
   },
   {
@@ -82,14 +88,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def rolling_holdout_splits(df, h, n_test_sets, time_col=\"ds\"):\n",
+    "def rolling_holdout_splits(df, h, n_test_sets, time_col='ds'):\n",
     "    # assume all ids share same ds grid\n",
-    "    all_ds = sorted(df[time_col].unique())\n",
+    "    all_ds = pd.to_datetime(sorted(df[time_col].unique()))\n",
     "    max_ds = all_ds[-1]\n",
+    "    step = pd.Timedelta(days=h)\n",
     "\n",
     "    for k in range(n_test_sets):\n",
-    "        test_end = max_ds - k * h\n",
-    "        test_start = test_end - h + 1\n",
+    "        test_end = max_ds - k * step\n",
+    "        test_start = test_end - pd.Timedelta(days=h - 1)\n",
     "\n",
     "        train = df[df[time_col] < test_start]\n",
     "        test = df[(df[time_col] >= test_start) & (df[time_col] <= test_end)]\n",
@@ -201,7 +208,7 @@
     "    }\n",
     "    \n",
     "n_test_sets = 1\n",
-    "h = 4\n",
+    "h = 28\n",
     "\n",
     "rmse_base_test = []\n",
     "bias_base_test = []\n",
@@ -223,7 +230,7 @@
     "    \n",
     "    auto_base = AutoMLForecast(\n",
     "    models={\"xgb\": AutoXGBoost(config=tweedie_space)},\n",
-    "    freq=1,\n",
+    "    freq=\"D\",\n",
     "    init_config=my_init_config,\n",
     "    fit_config=my_fit_config,\n",
     "    # reuse_cv_splits=True\n",
@@ -231,7 +238,7 @@
     "\n",
     "    auto_corr = AutoMLForecast(\n",
     "        models={\"xgb\": AutoXGBoost(config=tweedie_space)},\n",
-    "        freq=1,\n",
+    "        freq=\"D\",\n",
     "        init_config=my_init_config,\n",
     "        fit_config=my_fit_config,\n",
     "        # reuse_cv_splits=True\n",
@@ -256,13 +263,13 @@
     "    num_samples=num_samples,\n",
     "    optimize_kwargs=optimize_kwargs,\n",
     "    step_size=5,\n",
-    "    loss=rmse_loss,\n",
+    "    loss=mse_loss,\n",
     "    study_kwargs={\"sampler\": optuna.samplers.TPESampler()}\n",
     "    # prediction_intervals=PredictionIntervals(n_windows=n_windows, h=h),\n",
     "    )\n",
     "\n",
     "    preds_base = auto_base.predict(h=test_i.ds.nunique())\n",
-    "    metrics_base = eval_rmse_bias(test_i, preds_base, \"xgb\")\n",
+    "    metrics_base = eval_metrics(test_i, preds_base, \"xgb\")\n",
     "    \n",
     "    # Train corrected model:\n",
     "    auto_corr.fit(\n",
@@ -274,13 +281,16 @@
     "    optimize_kwargs=optimize_kwargs,\n",
     "    prediction_intervals=PredictionIntervals(n_windows=2, h=h),\n",
     "    percentile_correction=True,\n",
+    "    percentile_correction_mode=\"metric\",\n",
+    "    percentile_correction_metric=\"mse\",\n",
+    "    percentile_correction_levels=CORRECTION_LEVELS,\n",
     "    compute_corrected_cv_metrics=True,\n",
-    "    loss=rmse_loss,\n",
+    "    loss=mse_loss,\n",
     "    study_kwargs={\"sampler\": optuna.samplers.TPESampler()}\n",
     "    )\n",
     "\n",
     "    preds_corr = auto_corr.predict(h=test_i.ds.nunique())\n",
-    "    metrics_corr = eval_rmse_bias(test_i, preds_corr, \"xgb\")\n",
+    "    metrics_corr = eval_metrics(test_i, preds_corr, \"xgb\")\n",
     "    \n",
     "    rmse_base = metrics_base['rmse']\n",
     "    bias_base = metrics_base['rmse']\n",
@@ -339,7 +349,8 @@
     "    t_stat, p_val = stats.ttest_ind(preds_all.xgb_x, \n",
     "                                preds_all.xgb_y, \n",
     "                                equal_var=True)  \n",
-    "    p_val_cv.append(p_val)"
+    "    p_val_cv.append(p_val)\n",
+    "\n"
    ]
   },
   {
